<?xml version="1.0"?>
<package format="2">
    <name>video_frame_extractor</name>
    <version>0.0.0</version>
    <description>Extract frames from a video based on config rules.</description>

    <maintainer email="tipriest@todo.todo">tipriest</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>rospkg</depend>
    <exec_depend>python3-yaml</exec_depend>

    <export>
    </export>
</package>
